--- a/gleam.toml
+++ b/gleam.toml
@@ -1,5 +1,5 @@
 name = "aonyx_graph"
-version = "1.0.3"
+version = "1.1.0"
 gleam = ">= 1.10.0"
 
 description = "A graph library. Including path finding."
@@ -12,3 +12,4 @@ gleam_stdlib = ">= 0.59.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = ">= 1.0.0 and < 2.0.0"
+gleam_otp = ">= 0.16.1 and < 1.0.0"
